--- a/src/component/sidebar/sidebar.html
+++ b/src/component/sidebar/sidebar.html
@@ -1,40 +1,37 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="./sidebar.css" />
+  </head>
 
-<head>
-    <link rel="stylesheet" href="./sidebar.css">
-</head>
-
-<body>
-    <div class="m-sidebar">
-        <div>
-            <div class="m-sidebar-subtitle">
-                <span>
-                    Design Thinking: Theories and Application
-                </span>
-            </div>
-            <div class="m-sidebar-title">
-                <span>
-                    Module1: Why we need to learn Design Thinking
-                </span>
-            </div>
+  <body>
+    <div id="main"></div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript" src="./sidebar.js"></script>
+    <!-- <div class="m-sidebar">
+      <div>
+        <div class="m-sidebar-logo">
+          <img
+            src="https://gordonchantc.github.io/polyu-mooc-edx/src/images/logo/PolyUlogo.png"
+            alt="PolyU Design"
+          />
         </div>
-        <div class="m-sidebar-sub-module-title">
-            <span>
-                M1.1 Objective
-            </span>
+        <div class="m-sidebar-subtitle">
+          <span> Design Thinking: </span>
+          <span> Theories and Application </span>
         </div>
-        <div class="m-sidebar-sub-module-title active">
-            <span>
-                M1.2 Tradition Problem Solving Approach
-            </span>
+        <div class="m-sidebar-title">
+          <span> Module1: Why we need to learn Design Thinking </span>
         </div>
-        <div class="m-sidebar-course-menu">
-            <span>
-                Course Menu
-            </span>
-        </div>
-    </div>
-</body>
-
-
+      </div>
+      <div class="m-sidebar-sub-module-title">
+        <span> M1.1 Objective </span>
+      </div>
+      <div class="m-sidebar-sub-module-title active">
+        <span> M1.2 Tradition Problem Solving Approach </span>
+      </div>
+      <div class="m-sidebar-course-menu">
+        <span> Course Menu </span>
+      </div>
+    </div> -->
+  </body>
 </html>
