--- a/src/component/sidebar/sidebar.css
+++ b/src/component/sidebar/sidebar.css
@@ -1,6 +1,5 @@
 .m-sidebar {
     width: 260px;
-    height: 100%;
     padding: 25px;
     position: absolute;
     left: 0;
@@ -34,7 +33,8 @@
 }
 
 .m-sidebar-sub-module-title {
-    width: 217px;
+    width: 207px;
+    padding: 5px;
     font-size: 18px;
     cursor: pointer;
     line-height: 30px;
@@ -43,6 +43,11 @@
 .m-sidebar-sub-module-title:hover {
     
     background-color: rgba(255, 255, 255, 0.5);
+}
+
+.m-sidebar-sub-module-title > a {
+    color: inherit;
+    text-decoration: none;
 }
 
 .m-sidebar-sub-module-title.active {
