--- a/src/component/sidebar/sidebar.css
+++ b/src/component/sidebar/sidebar.css
@@ -1,9 +1,16 @@
+#main {
+    display: flex;
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 100%;
+}
+
 .m-sidebar {
     width: 260px;
     padding: 25px;
-    position: absolute;
+    position: sticky;
     left: 0;
-    top: 0;
+    top: 60px;
     background-color: hsl(207, 71%, 12%);
     color: white;
     font-family: 'Brandon Grotesque';
