--- a/src/component/sidebar/sidebar.css
+++ b/src/component/sidebar/sidebar.css
@@ -52,13 +52,13 @@
     background-color: rgba(255, 255, 255, 0.5);
 }
 
-.m-sidebar-sub-module-title > a {
+.m-sidebar-sub-module-title > a,
+.m-sidebar-sub-module-title > a:hover,
+.m-sidebar-sub-module-title > a:focus,
+.m-sidebar-sub-module-title > a:visited
+{
     color: inherit;
     text-decoration: none;
-}
-
-.m-sidebar-sub-module-title > a:visited {
-    color: inherit;
 }
 
 .m-sidebar-sub-module-title.active {
