--- a/src/component/sidebar/sidebar.css
+++ b/src/component/sidebar/sidebar.css
@@ -7,7 +7,7 @@
     display: flex;
     overflow-x: hidden;
     overflow-y: auto;
-    height: 1024px;
+    height: 930px;
 }
 
 .xblock {
@@ -17,10 +17,11 @@
 .m-sidebar {
     width: 260px;
     padding: 25px;
+    padding-top: 90px;
     margin-right: 20px;
     position: sticky;
     left: 0;
-    top: 60px;
+    top: 0;
     background-color: hsl(207, 71%, 12%);
     color: white;
     font-family: 'Brandon Grotesque';
