--- a/src/component/video/video.html
+++ b/src/component/video/video.html
@@ -1,71 +1,51 @@
 <html>
   <head> </head>
   <body>
-    <div>
-      <button
-        class="video-button"
-        style="width: 100px; height: 30px"
-        data-video-id="6f63e282-2720-4cad-bd65-e6d261f8b36d"
-      >
-        Video
-      </button>
-
-      <div
-        id="modal"
-        class="modal"
-        style="
-          width: 100vw;
-          height: 100vh;
-          position: absolute;
-          left: 0;
-          top: 0;
-          z-index: 1;
-          display: none;
-        "
-      >
-        <div
-        id="overlay"
-          style="
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.6);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-          "
-        >
-          <video style="max-width: 50%; z-index: 2" id="video" controls />
+    <div class="m-text-video-block">
+        <div class="m-video-preview" data-video-id="6f63e282-2720-4cad-bd65-e6d261f8b36d">
+            <img src="https://prod-images.edx-video.net/video-images/6f63e282-2720-4cad-bd65-e6d261f8b36d-thumbnails.0000001.jpeg" />
         </div>
+        <div class="m-text-block">
+            <div class="m-video-title">
+                Title
+            </div>
+            <div class="m-video-description">
+                Description
+            </div>
+            <div>
+                <form>
+                    <button class="m-video-download-content" formaction="">Download Handout</button> 
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <div
+      id="modal"
+      class="modal"
+      style="
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        left: 0;
+        top: 0;
+        z-index: 10000;
+        display: none;
+        padding: 0;
+        background-color: transparent;
+      "
+    >
+      <div
+        id="m-overlay"
+      >
+        <video style="max-width: 50%; z-index: 2" id="video" controls />
       </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"
-    ></script>
-    <script type="text/javascript">
-      $(".video-button").click((e) => {
-        if (Hls.isSupported()) {
-          const video = $("#video");
-          const hls = new Hls();
-          hls.loadSource(
-            "https://edx-video.net/" + $(e.currentTarget).data("video-id")
-          );
-          hls.attachMedia(video);
-          //   hls.on(Hls.Events.MANIFEST_PARSED, function () {
-          //     video.play();
-          //   });
-          $("#modal").show();
-        }
-      });
-
-      $("#overlay").click((e) => {
-        if ($(e.target).attr('id') === 'overlay') {
-          $("#modal").hide();
-        }
-      });
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hls.js/0.5.14/hls.min.js"></script>
+    <script src="./video.js"></script>
+    <link rel="stylesheet" href="./video.css" />
   </body>
 </html>
