update video js & css

--- a/src/component/video/video.css
+++ b/src/component/video/video.css
@@ -49,6 +49,7 @@
     font-family: Imapct;
     padding: 0;
     line-height: 24px !important;
+    background-image: none;
 }
 
 .m-video-download-content:hover {
