--- a/src/component/video/video.css
+++ b/src/component/video/video.css
@@ -19,11 +19,28 @@
     min-width: 290px;
     height: 160px;
     cursor: pointer;
+    position: relative;
 }
 
-.m-video-preview > img {
+.m-video-preview-thumbnail {
     width: 100%;
     height: 100%;
+}
+
+.m-video-preview-play {
+    width: 58px;
+    height: 37px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    animation: 0.05s linear;
+}
+
+.m-video-preview:hover > .m-video-preview-play {
+    width: 63.8px;
+    height: 40.7px;
 }
 
 .m-video-title {
@@ -42,24 +59,25 @@
 .m-video-download-content {
     width: 153px;
     height: 45px;
-    background-color: #0D2131;
-    color: white;
+    background-color: #0D2131 !important;
+    color: white !important;
     font-size: 16px;
     transition: 0.1s linear;
     font-family: Imapct;
     padding: 0;
     line-height: 24px !important;
     background-image: none !important;
+    box-shadow: none !important;
 }
 
 .m-video-download-content:hover {
-    background-color: white;
-    color: #0D2131;
+    background-color: white !important;
+    color: #0D2131 !important;
 }
 
 .m-video-download-content:focus {
-    background-color: #9DB1BF;
-    color: #0D2131;
+    background-color: #9DB1BF !important;
+    color: #0D2131 !important;
 }
 
 .modal {
