--- a/src/component/video/video.html
+++ b/src/component/video/video.html
@@ -5,7 +5,7 @@
 <div class="m-text-video-block">
   <div class="m-video-preview" data-video-id="{{ video_id }}">
     <img class="m-video-preview-thumbnail" src="{{ video_preview }}" />
-    <img class="m-video-preview-play" src="https://polyuit-my.sharepoint.com/personal/lyshochan_polyu_edu_hk/Documents/Commission/MOOC/VideoThumbnail/PlayButton/PlayButton50%25.png" />
+    <img class="m-video-preview-play" src="https://gordonchantc.github.io/polyu-mooc-edx/src/images/icon/PlayIcon.png" />
   </div>
   <div class="m-text-block">
     <div class="m-video-title">
