--- a/src/component/assessment/assessment.css
+++ b/src/component/assessment/assessment.css
@@ -1,56 +1,85 @@
 .problems-wrapper {
-    margin: 0 25px 0 25px;
+  margin: 0 25px 0 25px;
 }
 
 .problem-header {
-    margin: 25px 0 8px 0;
-    color: #0D2131;
-    font-family: Impact;
-    font-size: 28px;
-    line-height: 39px;
+  margin: 25px 0 8px 0;
+  color: #0d2131;
+  font-family: Impact;
+  font-size: 28px;
+  line-height: 39px;
 }
 
 .problem-progress {
-    margin-bottom: 8px;
-    color: #0D2132 !important;
-    font-family: Arial;
-    font-size: 14px !important;
-    line-height: 18px;
+  margin-bottom: 8px;
+  color: #0d2132 !important;
+  font-family: Arial;
+  font-size: 14px !important;
+  line-height: 18px;
 }
 
 legend.response-fieldset-legend {
-    margin-bottom: 8px !important;
-    color: #0D2133;
-    font-family: Arial;
-    font-size: 18px;
-    line-height: 24px;
+  margin-bottom: 8px !important;
+  color: #0d2133;
+  font-family: Arial;
+  font-size: 18px;
+  line-height: 24px;
 }
 
 label.response-label {
-    margin-bottom: 8px !important;
+  margin-bottom: 8px !important;
 }
 
 button.submit.btn-brand {
-    width: 153px;
-    height: 45px;
-    background-color: #0D2131 !important;
-    color: white !important;
-    font-size: 16px;
-    transition: 0.1s linear;
-    font-family: Imapct;
-    padding: 0;
-    line-height: 24px !important;
-    background-image: none !important;
-    box-shadow: none !important;
-    margin-bottom: 25px;
+  width: 153px;
+  height: 45px;
+  background-color: #0d2131 !important;
+  color: white !important;
+  font-size: 16px;
+  transition: 0.1s linear;
+  font-family: Imapct;
+  padding: 0;
+  line-height: 24px !important;
+  background-image: none !important;
+  box-shadow: none !important;
+  margin-bottom: 25px;
 }
 
 button.submit.btn-brand:hover {
-    background-color: white !important;
-    color: #0D2131 !important;
+  background-color: white !important;
+  color: #0d2131 !important;
 }
 
 button.submit.btn-brand:focus {
-    background-color: #9DB1BF !important;
-    color: #0D2131 !important;
+  background-color: #9db1bf !important;
+  color: #0d2131 !important;
+}
+
+.unit-title {
+  margin-bottom: 30px;
+  color: #0d2130;
+  font-family: Impact;
+  font-size: 36px;
+  line-height: 49px;
+}
+
+.m-text-block {
+  margin: 0 40px;
+}
+
+.m-text-title {
+  margin-bottom: 8px;
+  color: #0d2130;
+  font-family: Impact;
+  font-size: 28px;
+  line-height: 37px;
+}
+
+.m-text-desc {
+  margin-bottom: 30px;
+  color: #0d2130;
+  font-family: Arial;
+  font-size: 18px;
+  line-height: 24px;
+  text-align: left;
 }
