--- a/src/component/video/video.css
+++ b/src/component/video/video.css
@@ -100,3 +100,11 @@
     align-items: center;
     justify-content: center;
 }
+
+.m-video-only-block {
+    margin: 24px 40px 30px 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+}
