--- a/src/component/video/video.html
+++ b/src/component/video/video.html
@@ -22,6 +22,23 @@
   </div>
 </div>
 
+<!-- Video Only Block -->
+
+<div class="m-video-only-block">
+  <div class="m-video-title">
+    {{ title }}
+  </div>
+  <div class="m-video-only-preview" data-video-id="{{ video_id }}">
+    <img class="m-video-preview-thumbnail" src="{{ video_preview }}" />
+    <img class="m-video-preview-play" src="https://gordonchantc.github.io/polyu-mooc-edx/src/images/icon/PlayIcon.png" />
+  </div>
+  <div>
+    <form target="_blank">
+      <button class="m-video-download-content" formaction="{{ handout_url }}">Download Handout</button> 
+    </form>
+  </div>
+</div>
+
 <!-- Video Overlay -->
 
 <div id="modal" class="modal">
