update video css

--- a/src/component/video/video.css
+++ b/src/component/video/video.css
@@ -9,7 +9,7 @@
     font-family: Impact;
 }
 
-.m-text-video-block > .m-text-block {
+.m-text-block {
     display: flex;
     flex-direction: column;
     margin: 0 10px 0 0;
