--- a/src/component/video/video.css
+++ b/src/component/video/video.css
@@ -12,7 +12,7 @@
 .m-text-block {
     display: flex;
     flex-direction: column;
-    margin: 0 10px 0 0;
+    margin-left: 10px;
 }
 
 .m-video-preview {
