update sidebar & video css

--- a/src/component/sidebar/sidebar.css
+++ b/src/component/sidebar/sidebar.css
@@ -22,7 +22,7 @@
     position: sticky;
     left: 0;
     top: 0;
-    background-color: hsl(207, 71%, 12%);
+    background-color: #092236;
     color: white;
     font-family: 'Brandon Grotesque';
     display: flex;
