--- a/src/component/text/text.css
+++ b/src/component/text/text.css
@@ -1,6 +1,5 @@
 .unit-title,
-div.unit > h1.mb-0 
-{
+div.unit > h1.mb-0 {
   margin-bottom: 30px;
   color: #0d2130;
   font-family: Impact;
@@ -30,4 +29,22 @@ div.unit > h1.mb-0
   font-size: 18px;
   line-height: 24px;
   text-align: left;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+.m-text-desc > a {
+  color: #db9d00;
+  text-decoration: underline;
+}
+
+.m-text-block > a:hover {
+  color: #0d2130;
+}
+
+.m-text-desc > a:focus,
+.m-text-desc > a:visited {
+  color: inherit;
 }
