--- a/src/component/text/text.css
+++ b/src/component/text/text.css
@@ -48,3 +48,27 @@ a.m-hyperlink:focus,
 a.m-hyperlink:visited {
   color: inherit !important;
 }
+
+input.input-main[type="button"] {
+  width: 153px;
+  height: 45px;
+  background-color: #0D2131 !important;
+  color: white !important;
+  font-size: 16px;
+  transition: 0.1s linear;
+  font-family: Imapct;
+  padding: 0;
+  line-height: 24px !important;
+  background-image: none !important;
+  box-shadow: none !important;
+}
+
+input.input-main[type="button"]:hover {
+  background-color: white !important;
+  color: #0D2131 !important;
+}
+
+input.input-main[type="button"]:focus {
+  background-color: #9DB1BF !important;
+  color: #0D2131 !important;
+}
