--- a/src/component/sidebar/sidebar.css
+++ b/src/component/sidebar/sidebar.css
@@ -58,6 +58,7 @@
     font-size: 18px;
     cursor: pointer;
     line-height: 30px;
+    color: white;
 }
 
 .m-sidebar-sub-module-title:hover {
@@ -65,10 +66,10 @@
     background-color: rgba(255, 255, 255, 0.5);
 }
 
-a > .m-sidebar-sub-module-title,
-a:hover > .m-sidebar-sub-module-title,
-a:focus > .m-sidebar-sub-module-title,
-a:visited > .m-sidebar-sub-module-title
+.m-sidebar > a,
+.m-sidebar > a:hover,
+.m-sidebar > a:focus,
+.m-sidebar > a:visited
 {
     color: white !important;
     text-decoration: none;
