--- a/src/component/assessment/assessment.css
+++ b/src/component/assessment/assessment.css
@@ -12,7 +12,7 @@
 
 .problem-progress {
   margin-bottom: 2px;
-  color: #0d2132 !important;
+  color: #0d2131 !important;
   font-family: Arial;
   font-size: 14px !important;
   line-height: 18px;
@@ -20,7 +20,7 @@
 
 legend.response-fieldset-legend {
   margin-bottom: 8px !important;
-  color: #0d2133;
+  color: #0d2131;
   font-family: Arial;
   font-size: 18px;
   line-height: 24px;
@@ -57,8 +57,29 @@ button.submit.btn-brand:focus {
 
 .unit-title {
   margin-bottom: 30px;
-  color: #0d2130;
+  color: #0d2131;
   font-family: Impact;
   font-size: 36px;
   line-height: 49px;
+}
+
+div.explanation-title {
+  color: #0d2131;
+  font-family: Impact;
+  font-size: 20px;
+  line-height: 36px;
+  margin-bottom: 8px;
+}
+
+span.hint-label {
+  color: #0d2131;
+  margin-bottom: 8px;
+}
+
+div.hint-text {
+  margin-bottom: 8px !important;
+  color: #0d2131;
+  font-family: Arial;
+  font-size: 18px;
+  line-height: 24px;
 }
