--- a/src/component/discussion/discussion.css
+++ b/src/component/discussion/discussion.css
@@ -17,7 +17,7 @@ h3.discussion-module-title {
 div.inline-discussion-topic {
   color: #0d2131;
   font-family: Arial;
-  font-size: 18px;
+  font-size: 18px !important;
   line-height: 24px;
 }
 
