--- a/src/component/video/video.css
+++ b/src/component/video/video.css
@@ -121,3 +121,28 @@
     width: 66px;
     height: 44px;
 }
+
+.m-video-preview-button-container {
+    width: 60%;
+    height: 100%;
+    display: flex;
+    position: absolute;
+    left: 20%;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.m-video-preview-en,
+.m-video-preview-cn {
+    width: 180px;
+    height: 45px;
+    background-color: #0D2131 !important;
+    color: white !important;
+    font-size: 16px;
+    transition: 0.1s linear;
+    font-family: Imapct;
+    padding: 0;
+    line-height: 24px !important;
+    background-image: none !important;
+    box-shadow: none !important;
+}
