--- a/src/component/video/video.css
+++ b/src/component/video/video.css
@@ -127,7 +127,8 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    left: 20%;
+    left: 0;
+    top: 0;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
