--- a/src/component/video/video.css
+++ b/src/component/video/video.css
@@ -125,10 +125,10 @@
 
 .m-video-preview-button-container {
     width: 100%;
-    height: 100%;
+    height: 20%;
     position: absolute;
     left: 0;
-    top: 0;
+    bottom: 0;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
