--- a/src/component/video/video.css
+++ b/src/component/video/video.css
@@ -125,20 +125,24 @@
 
 .m-video-preview-button-container {
     width: 100%;
-    height: 20%;
+    height: 100%;
+    padding-bottom: 10px;
+    background-color: rgba(255, 255, 255, 0.5);
     position: absolute;
     left: 0;
-    bottom: 10%;
+    top: 0;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: space-evenly;
-    background-color: rgba(0, 0, 0, 0.5);
     opacity: 0;
 }
 
+.m-video-preview:hover > .m-video-preview-button-container,
 .m-video-preview-button-container:hover {
     opacity: 1;
 }
+
+
 
 .m-video-preview-en,
 .m-video-preview-cn {
