--- a/src/component/video/video.css
+++ b/src/component/video/video.css
@@ -128,6 +128,7 @@
     height: 100%;
     padding-bottom: 10px;
     background-color: rgba(255, 255, 255, 0.5);
+    box-sizing: border-box;
     position: absolute;
     left: 0;
     top: 0;
@@ -135,6 +136,7 @@
     align-items: flex-end;
     justify-content: space-evenly;
     opacity: 0;
+    transition: 0.2s linear;
 }
 
 .m-video-preview:hover > .m-video-preview-button-container,
