--- a/src/component/video/video.css
+++ b/src/component/video/video.css
@@ -126,14 +126,12 @@
 .m-video-preview-button-container {
     width: 100%;
     height: 100%;
-    padding-bottom: 10px;
     background-color: rgba(255, 255, 255, 0.5);
-    box-sizing: border-box;
     position: absolute;
     left: 0;
     top: 0;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     justify-content: space-evenly;
     opacity: 0;
     transition: 0.2s linear;
