--- a/src/component/video/video.css
+++ b/src/component/video/video.css
@@ -1,167 +1,166 @@
 .m-text-video-block {
-    display: flex;
-    align-items: stretch;
-    justify-content: stretch;
-    gap: 3px;
-    padding: 0 5px 0 5px;
-    margin-bottom: 30px;
-    color: #0D2131;
-    font-family: Impact;
+  display: flex;
+  align-items: stretch;
+  justify-content: stretch;
+  gap: 3px;
+  padding: 0 5px 0 5px;
+  margin-bottom: 30px;
+  color: #0d2131;
+  font-family: Impact;
 }
 
 .m-text-block {
-    display: flex;
-    flex-direction: column;
-    margin-left: 10px;
-    font-family: Arial;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  font-family: Arial;
 }
 
 .m-video-preview,
 .m-video-preview-with-button {
-    width: 290px;
-    min-width: 290px;
-    height: 160px;
-    cursor: pointer;
-    position: relative;
+  width: 290px;
+  min-width: 290px;
+  height: 160px;
+  cursor: pointer;
+  position: relative;
 }
 
 .m-video-preview-thumbnail {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .m-video-preview-play {
-    width: 60px;
-    height: 40px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    animation: 0.1s linear;
+  width: 60px;
+  height: 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  animation: 0.1s linear;
 }
 
 .m-video-preview:hover > .m-video-preview-play {
-    width: 66px;
-    height: 44px;
+  width: 66px;
+  height: 44px;
 }
 
 .m-video-title {
-    font-size: 28px;
-    line-height: 39px;
-    margin-bottom: 12px;
-    font-family: Impact;
+  font-size: 28px;
+  line-height: 39px;
+  margin-bottom: 12px;
+  font-family: Impact;
 }
 
 .m-video-description {
-    font-size: 14px;
-    line-height: 18px;
-    text-align: left;
-    margin-bottom: 24px;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: left;
+  margin-bottom: 24px;
 }
 
 .m-video-download-content {
-    width: 153px;
-    height: 45px;
-    background-color: #0D2131 !important;
-    color: white !important;
-    font-size: 16px;
-    transition: 0.1s linear;
-    font-family: Imapct;
-    padding: 0;
-    line-height: 24px !important;
-    background-image: none !important;
-    box-shadow: none !important;
+  width: 153px;
+  height: 45px;
+  background-color: #0d2131 !important;
+  color: white !important;
+  font-size: 16px;
+  transition: 0.1s linear;
+  font-family: Imapct;
+  padding: 0;
+  line-height: 24px !important;
+  background-image: none !important;
+  box-shadow: none !important;
 }
 
 .m-video-download-content:hover {
-    background-color: white !important;
-    color: #0D2131 !important;
+  background-color: white !important;
+  color: #0d2131 !important;
 }
 
 .m-video-download-content:focus {
-    background-color: #9DB1BF !important;
-    color: #0D2131 !important;
+  background-color: #9db1bf !important;
+  color: #0d2131 !important;
 }
 
 .modal {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 10000;
-    display: none;
-    padding: 0;
-    background-color: transparent;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 10000;
+  display: none;
+  padding: 0;
+  background-color: transparent;
 }
 
 #m-overlay {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .m-video-only-block {
-    margin: 24px 3px 30px 3px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 24px;
+  margin: 24px 3px 30px 3px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
 }
 
-.m-video-only-preview {
-    cursor: pointer;
-    position: relative;
+.m-video-only-preview,
+.m-video-only-preview-with-button {
+  cursor: pointer;
+  position: relative;
 }
 
 .m-video-only-preview:hover > .m-video-preview-play {
-    width: 66px;
-    height: 44px;
+  width: 66px;
+  height: 44px;
 }
 
 .m-video-preview-button-container {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.5);
-    position: absolute;
-    left: 0;
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    opacity: 0;
-    transition: 0.2s linear;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  opacity: 0;
+  transition: 0.2s linear;
 }
 
 .m-video-preview:hover > .m-video-preview-button-container,
 .m-video-preview-button-container:hover {
-    opacity: 1;
+  opacity: 1;
 }
-
-
 
 .m-video-preview-en,
 .m-video-preview-cn {
-    width: 70px;
-    height: 35px;
-    background-color: #0D2131 !important;
-    color: white !important;
-    font-size: 16px;
-    transition: 0.1s linear;
-    font-family: Imapct;
-    padding: 0;
-    line-height: 24px !important;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 70px;
+  height: 35px;
+  background-color: #0d2131 !important;
+  color: white !important;
+  font-size: 16px;
+  transition: 0.1s linear;
+  font-family: Imapct;
+  padding: 0;
+  line-height: 24px !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .m-video-preview-en:hover,
 .m-video-preview-cn:hover {
-    background-color: white !important;
-    color: #0D2131 !important;
+  background-color: white !important;
+  color: #0d2131 !important;
 }
